Updated team members

--- a/index.html
+++ b/index.html
@@ -74,27 +74,27 @@
         <div class="team-div">
             <ul class="team-list">
                 <div class="aasif">
-                    <li>Aasif Khan A</li>
+                    <li>Aasif Khan A - 24MIS1075</li>
                     <p class="parateam"> Frontend development and project coordination</p>
                 </div>
 
                 <div class="harinaath">
-                    <li>Harinaath B</li>
+                    <li>Harinaath B - 24MIS1084</li>
                     <p class="parateam"> Backend integration of JavaScript </p>
                 </div>
 
                 <div class="nirmal">
-                    <li>Nirmal P</li>
+                    <li>Nirmal P - 24MIS1025</li>
                     <p class="parateam"> Resource management and project support</p>
                 </div>
 
                 <div class="nanditha">
-                    <li>Nanditha</li>
+                    <li>Nandhitha Gandhi G - 24MIS1058</li>
                     <p class="parateam"> Implementation of JavaScript stack architecture</p>
                 </div>
 
                 <div class="serma">
-                    <li>Serma Durai</li>
+                    <li>Serma Durai M - 24MIS1008</li>
                     <p class="parateam"> Quality assurance and performance optimization</p>
                 </div>
             </ul>
